stats/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> empty
Rule 2     program -> statements
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> expr SEP
Rule 6     statement -> var_assign SEP
Rule 7     statement -> LET var : var_type SEP
Rule 8     statement -> var_define SEP
Rule 9     statement -> class_definition
Rule 10    statement -> struct_definition
Rule 11    statement -> if_statement
Rule 12    statement -> for_statement
Rule 13    statement -> while_statement
Rule 14    statement -> return_statement
Rule 15    statement -> function_definition
Rule 16    statement -> import_statement
Rule 17    class_definition -> CLASS ID { function_definitions }
Rule 18    function_definitions -> function_definitions function_definition
Rule 19    function_definitions -> function_definition
Rule 20    function_definitions -> empty
Rule 21    struct_definition -> STRUCT ID { struct_fields } SEP
Rule 22    struct_fields -> struct_fields struct_field
Rule 23    struct_fields -> struct_field
Rule 24    struct_field -> LET ID : var_type SEP
Rule 25    var_type -> DICT_TYPE
Rule 26    var_type -> LIST_TYPE
Rule 27    var_type -> BOOL_TYPE
Rule 28    var_type -> STRING_TYPE
Rule 29    var_type -> FLOAT_TYPE
Rule 30    var_type -> INT_TYPE
Rule 31    import_statement -> IMPORT STRING SEP
Rule 32    function_definition -> FN ID ( params ) block
Rule 33    expr -> getter
Rule 34    expr -> { member_list }
Rule 35    expr -> NIL
Rule 36    expr -> var
Rule 37    expr -> var [ expr ]
Rule 38    expr -> list_val
Rule 39    expr -> FALSE
Rule 40    expr -> TRUE
Rule 41    expr -> STRING
Rule 42    expr -> FLOAT
Rule 43    expr -> INT
Rule 44    expr -> ( expr )
Rule 45    expr -> expr % expr  [precedence=left, level=11]
Rule 46    expr -> expr / expr  [precedence=left, level=11]
Rule 47    expr -> expr * expr  [precedence=left, level=11]
Rule 48    expr -> expr - expr  [precedence=left, level=10]
Rule 49    expr -> expr + expr  [precedence=left, level=10]
Rule 50    expr -> ! expr  [precedence=right, level=13]
Rule 51    expr -> + expr  [precedence=right, level=12]
Rule 52    expr -> - expr  [precedence=right, level=12]
Rule 53    expr -> ~ expr  [precedence=right, level=12]
Rule 54    expr -> expr | expr  [precedence=left, level=4]
Rule 55    expr -> expr ^ expr  [precedence=left, level=5]
Rule 56    expr -> expr & expr  [precedence=left, level=6]
Rule 57    expr -> expr SHR expr  [precedence=left, level=9]
Rule 58    expr -> expr SHL expr  [precedence=left, level=9]
Rule 59    expr -> expr GREATER expr  [precedence=left, level=8]
Rule 60    expr -> expr LESS expr  [precedence=left, level=8]
Rule 61    expr -> expr OR expr  [precedence=left, level=2]
Rule 62    expr -> expr AND expr  [precedence=left, level=3]
Rule 63    expr -> expr GREATEREQ expr  [precedence=left, level=8]
Rule 64    expr -> expr LESSEQ expr  [precedence=left, level=8]
Rule 65    expr -> expr NOTEQ expr  [precedence=left, level=7]
Rule 66    expr -> expr EQEQ expr  [precedence=left, level=7]
Rule 67    expr -> expr PIPE ID ( args )
Rule 68    expr -> ID DOUBLECOLON ID ( args )
Rule 69    expr -> ID ( args )
Rule 70    expr -> expr ? expr : expr
Rule 71    expr -> TYPEOF expr
Rule 72    expr -> LAMBDA ( params ) ARROW expr
Rule 73    expr -> ID LEFTARROW { struct_init_exprs }
Rule 74    struct_init_exprs -> struct_init_exprs , expr
Rule 75    struct_init_exprs -> expr
Rule 76    var_define -> LET getter ASSIGN expr
Rule 77    var_define -> LET var ASSIGN expr
Rule 78    return_statement -> RETURN expr SEP
Rule 79    var_assign -> DEC var  [precedence=right, level=12]
Rule 80    var_assign -> INC var  [precedence=right, level=12]
Rule 81    var_assign -> var SHRASGN expr  [precedence=right, level=1]
Rule 82    var_assign -> var SHLASGN expr  [precedence=right, level=1]
Rule 83    var_assign -> var XORASGN expr  [precedence=right, level=1]
Rule 84    var_assign -> var ORASGN expr  [precedence=right, level=1]
Rule 85    var_assign -> var ANDASGN expr  [precedence=right, level=1]
Rule 86    var_assign -> var MODULOASGN expr  [precedence=right, level=1]
Rule 87    var_assign -> var SLASHASGN expr  [precedence=right, level=1]
Rule 88    var_assign -> var STARASGN expr  [precedence=right, level=1]
Rule 89    var_assign -> var MINUSASGN expr  [precedence=right, level=1]
Rule 90    var_assign -> var PLUSASGN expr  [precedence=right, level=1]
Rule 91    var_assign -> var ASSIGN expr
Rule 92    if_statement -> IF expr block
Rule 93    if_statement -> IF expr block ELSE block
Rule 94    while_statement -> WHILE expr block
Rule 95    for_statement -> FOR var_assign SEP expr SEP var_assign block
Rule 96    list_val -> [ exprs ]
Rule 97    exprs -> exprs , expr
Rule 98    exprs -> expr
Rule 99    exprs -> empty
Rule 100   var -> var [ expr ]
Rule 101   var -> ID
Rule 102   empty -> <empty>
Rule 103   block -> statement
Rule 104   block -> { program }
Rule 105   params -> empty
Rule 106   params -> param
Rule 107   params -> params , param
Rule 108   param -> ID : var_type
Rule 109   args -> empty
Rule 110   args -> arg
Rule 111   args -> args , arg
Rule 112   arg -> expr
Rule 113   member_list -> member_list , member
Rule 114   member_list -> member
Rule 115   member_list -> empty
Rule 116   member -> STRING : expr
Rule 117   getter -> ID
Rule 118   getter -> getter . ID

Terminals, with rules where they appear:

!                    : 50
%                    : 45
&                    : 56
(                    : 32 44 67 68 69 72
)                    : 32 44 67 68 69 72
*                    : 47
+                    : 49 51
,                    : 74 97 107 111 113
-                    : 48 52
.                    : 118
/                    : 46
:                    : 7 24 70 108 116
?                    : 70
AND                  : 62
ANDASGN              : 85
ARROW                : 72
ASSIGN               : 76 77 91
BOOL_TYPE            : 27
CLASS                : 17
DEC                  : 79
DICT_TYPE            : 25
DOUBLECOLON          : 68
ELSE                 : 93
EQEQ                 : 66
FALSE                : 39
FLOAT                : 42
FLOAT_TYPE           : 29
FN                   : 32
FOR                  : 95
GREATER              : 59
GREATEREQ            : 63
ID                   : 17 21 24 32 67 68 68 69 73 101 108 117 118
IF                   : 92 93
IMPORT               : 31
INC                  : 80
INT                  : 43
INT_TYPE             : 30
LAMBDA               : 72
LEFTARROW            : 73
LESS                 : 60
LESSEQ               : 64
LET                  : 7 24 76 77
LIST_TYPE            : 26
MINUSASGN            : 89
MODULOASGN           : 86
NIL                  : 35
NOTEQ                : 65
OR                   : 61
ORASGN               : 84
PIPE                 : 67
PLUSASGN             : 90
RETURN               : 78
SEP                  : 5 6 7 8 21 24 31 78 95 95
SHL                  : 58
SHLASGN              : 82
SHR                  : 57
SHRASGN              : 81
SLASHASGN            : 87
STARASGN             : 88
STRING               : 31 41 116
STRING_TYPE          : 28
STRUCT               : 21
TRUE                 : 40
TYPEOF               : 71
WHILE                : 94
XORASGN              : 83
[                    : 37 96 100
]                    : 37 96 100
^                    : 55
error                : 
{                    : 17 21 34 73 104
|                    : 54
}                    : 17 21 34 73 104
~                    : 53

Nonterminals, with rules where they appear:

arg                  : 110 111
args                 : 67 68 69 111
block                : 32 92 93 93 94 95
class_definition     : 9
empty                : 1 20 99 105 109 115
expr                 : 5 37 44 45 45 46 46 47 47 48 48 49 49 50 51 52 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 70 70 70 71 72 74 75 76 77 78 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 97 98 100 112 116
exprs                : 96 97
for_statement        : 12
function_definition  : 15 18 19
function_definitions : 17 18
getter               : 33 76 118
if_statement         : 11
import_statement     : 16
list_val             : 38
member               : 113 114
member_list          : 34 113
param                : 106 107
params               : 32 72 107
program              : 104 0
return_statement     : 14
statement            : 3 4 103
statements           : 2 3
struct_definition    : 10
struct_field         : 22 23
struct_fields        : 21 22
struct_init_exprs    : 73 74
var                  : 7 36 37 77 79 80 81 82 83 84 85 86 87 88 89 90 91 100
var_assign           : 6 95 95
var_define           : 8
var_type             : 7 24 108
while_statement      : 13


state 0

    (0) S' -> . program
    (1) program -> . empty
    (2) program -> . statements
    (102) empty -> .
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . expr SEP
    (6) statement -> . var_assign SEP
    (7) statement -> . LET var : var_type SEP
    (8) statement -> . var_define SEP
    (9) statement -> . class_definition
    (10) statement -> . struct_definition
    (11) statement -> . if_statement
    (12) statement -> . for_statement
    (13) statement -> . while_statement
    (14) statement -> . return_statement
    (15) statement -> . function_definition
    (16) statement -> . import_statement
    (33) expr -> . getter
    (34) expr -> . { member_list }
    (35) expr -> . NIL
    (36) expr -> . var
    (37) expr -> . var [ expr ]
    (38) expr -> . list_val
    (39) expr -> . FALSE
    (40) expr -> . TRUE
    (41) expr -> . STRING
    (42) expr -> . FLOAT
    (43) expr -> . INT
    (44) expr -> . ( expr )
    (45) expr -> . expr % expr
    (46) expr -> . expr / expr
    (47) expr -> . expr * expr
    (48) expr -> . expr - expr
    (49) expr -> . expr + expr
    (50) expr -> . ! expr
    (51) expr -> . + expr
    (52) expr -> . - expr
    (53) expr -> . ~ expr
    (54) expr -> . expr | expr
    (55) expr -> . expr ^ expr
    (56) expr -> . expr & expr
    (57) expr -> . expr SHR expr
    (58) expr -> . expr SHL expr
    (59) expr -> . expr GREATER expr
    (60) expr -> . expr LESS expr
    (61) expr -> . expr OR expr
    (62) expr -> . expr AND expr
    (63) expr -> . expr GREATEREQ expr
    (64) expr -> . expr LESSEQ expr
    (65) expr -> . expr NOTEQ expr
    (66) expr -> . expr EQEQ expr
    (67) expr -> . expr PIPE ID ( args )
    (68) expr -> . ID DOUBLECOLON ID ( args )
    (69) expr -> . ID ( args )
    (70) expr -> . expr ? expr : expr
    (71) expr -> . TYPEOF expr
    (72) expr -> . LAMBDA ( params ) ARROW expr
    (73) expr -> . ID LEFTARROW { struct_init_exprs }
    (79) var_assign -> . DEC var
    (80) var_assign -> . INC var
    (81) var_assign -> . var SHRASGN expr
    (82) var_assign -> . var SHLASGN expr
    (83) var_assign -> . var XORASGN expr
    (84) var_assign -> . var ORASGN expr
    (85) var_assign -> . var ANDASGN expr
    (86) var_assign -> . var MODULOASGN expr
    (87) var_assign -> . var SLASHASGN expr
    (88) var_assign -> . var STARASGN expr
    (89) var_assign -> . var MINUSASGN expr
    (90) var_assign -> . var PLUSASGN expr
    (91) var_assign -> . var ASSIGN expr
    (76) var_define -> . LET getter ASSIGN expr
    (77) var_define -> . LET var ASSIGN expr
    (17) class_definition -> . CLASS ID { function_definitions }
    (21) struct_definition -> . STRUCT ID { struct_fields } SEP
    (92) if_statement -> . IF expr block
    (93) if_statement -> . IF expr block ELSE block
    (95) for_statement -> . FOR var_assign SEP expr SEP var_assign block
    (94) while_statement -> . WHILE expr block
    (78) return_statement -> . RETURN expr SEP
    (32) function_definition -> . FN ID ( params ) block
    (31) import_statement -> . IMPORT STRING SEP
    (117) getter -> . ID
    (118) getter -> . getter . ID
    (100) var -> . var [ expr ]
    (101) var -> . ID
    (96) list_val -> . [ exprs ]
    $end            reduce using rule 102 (empty -> .)
    LET             shift and go to state 7
    {               shift and go to state 19
    NIL             shift and go to state 20
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    STRING          shift and go to state 25
    FLOAT           shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 28
    !               shift and go to state 31
    +               shift and go to state 30
    -               shift and go to state 29
    ~               shift and go to state 32
    ID              shift and go to state 33
    TYPEOF          shift and go to state 34
    LAMBDA          shift and go to state 35
    DEC             shift and go to state 36
    INC             shift and go to state 37
    CLASS           shift and go to state 38
    STRUCT          shift and go to state 39
    IF              shift and go to state 40
    FOR             shift and go to state 41
    WHILE           shift and go to state 42
    RETURN          shift and go to state 43
    FN              shift and go to state 44
    IMPORT          shift and go to state 45
    [               shift and go to state 21

    program                        shift and go to state 1
    empty                          shift and go to state 2
    statements                     shift and go to state 3
    statement                      shift and go to state 4
    expr                           shift and go to state 5
    var_assign                     shift and go to state 6
    var                            shift and go to state 8
    var_define                     shift and go to state 9
    class_definition               shift and go to state 10
    struct_definition              shift and go to state 11
    if_statement                   shift and go to state 12
    for_statement                  shift and go to state 13
    while_statement                shift and go to state 14
    return_statement               shift and go to state 15
    function_definition            shift and go to state 16
    import_statement               shift and go to state 17
    getter                         shift and go to state 18
    list_val                       shift and go to state 22

state 1

    (0) S' -> program .


state 2

    (1) program -> empty .
    $end            reduce using rule 1 (program -> empty .)


state 3

    (2) program -> statements .
    (3) statements -> statements . statement
    (5) statement -> . expr SEP
    (6) statement -> . var_assign SEP
    (7) statement -> . LET var : var_type SEP
    (8) statement -> . var_define SEP
    (9) statement -> . class_definition
    (10) statement -> . struct_definition
    (11) statement -> . if_statement
    (12) statement -> . for_statement
    (13) statement -> . while_statement
    (14) statement -> . return_statement
    (15) statement -> . function_definition
    (16) statement -> . import_statement
    (33) expr -> . getter
    (34) expr -> . { member_list }
    (35) expr -> . NIL
    (36) expr -> . var
    (37) expr -> . var [ expr ]
    (38) expr -> . list_val
    (39) expr -> . FALSE
    (40) expr -> . TRUE
    (41) expr -> . STRING
    (42) expr -> . FLOAT
    (43) expr -> . INT
    (44) expr -> . ( expr )
    (45) expr -> . expr % expr
    (46) expr -> . expr / expr
    (47) expr -> . expr * expr
    (48) expr -> . expr - expr
    (49) expr -> . expr + expr
    (50) expr -> . ! expr
    (51) expr -> . + expr
    (52) expr -> . - expr
    (53) expr -> . ~ expr
    (54) expr -> . expr | expr
    (55) expr -> . expr ^ expr
    (56) expr -> . expr & expr
    (57) expr -> . expr SHR expr
    (58) expr -> . expr SHL expr
    (59) expr -> . expr GREATER expr
    (60) expr -> . expr LESS expr
    (61) expr -> . expr OR expr
    (62) expr -> . expr AND expr
    (63) expr -> . expr GREATEREQ expr
    (64) expr -> . expr LESSEQ expr
    (65) expr -> . expr NOTEQ expr
    (66) expr -> . expr EQEQ expr
    (67) expr -> . expr PIPE ID ( args )
    (68) expr -> . ID DOUBLECOLON ID ( args )
    (69) expr -> . ID ( args )
    (70) expr -> . expr ? expr : expr
    (71) expr -> . TYPEOF expr
    (72) expr -> . LAMBDA ( params ) ARROW expr
    (73) expr -> . ID LEFTARROW { struct_init_exprs }
    (79) var_assign -> . DEC var
    (80) var_assign -> . INC var
    (81) var_assign -> . var SHRASGN expr
    (82) var_assign -> . var SHLASGN expr
    (83) var_assign -> . var XORASGN expr
    (84) var_assign -> . var ORASGN expr
    (85) var_assign -> . var ANDASGN expr
    (86) var_assign -> . var MODULOASGN expr
    (87) var_assign -> . var SLASHASGN expr
    (88) var_assign -> . var STARASGN expr
    (89) var_assign -> . var MINUSASGN expr
    (90) var_assign -> . var PLUSASGN expr
    (91) var_assign -> . var ASSIGN expr
    (76) var_define -> . LET getter ASSIGN expr
    (77) var_define -> . LET var ASSIGN expr
    (17) class_definition -> . CLASS ID { function_definitions }
    (21) struct_definition -> . STRUCT ID { struct_fields } SEP
    (92) if_statement -> . IF expr block
    (93) if_statement -> . IF expr block ELSE block
    (95) for_statement -> . FOR var_assign SEP expr SEP var_assign block
    (94) while_statement -> . WHILE expr block
    (78) return_statement -> . RETURN expr SEP
    (32) function_definition -> . FN ID ( params ) block
    (31) import_statement -> . IMPORT STRING SEP
    (117) getter -> . ID
    (118) getter -> . getter . ID
    (100) var -> . var [ expr ]
    (101) var -> . ID
    (96) list_val -> . [ exprs ]
    $end            reduce using rule 2 (program -> statements .)
    }               reduce using rule 2 (program -> statements .)
    LET             shift and go to state 7
    {               shift and go to state 19
    NIL             shift and go to state 20
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    STRING          shift and go to state 25
    FLOAT           shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 28
    !               shift and go to state 31
    +               shift and go to state 30
    -               shift and go to state 29
    ~               shift and go to state 32
    ID              shift and go to state 33
    TYPEOF          shift and go to state 34
    LAMBDA          shift and go to state 35
    DEC             shift and go to state 36
    INC             shift and go to state 37
    CLASS           shift and go to state 38
    STRUCT          shift and go to state 39
    IF              shift and go to state 40
    FOR             shift and go to state 41
    WHILE           shift and go to state 42
    RETURN          shift and go to state 43
    FN              shift and go to state 44
    IMPORT          shift and go to state 45
    [               shift and go to state 21

    statement                      shift and go to state 46
    expr                           shift and go to state 5
    var_assign                     shift and go to state 6
    var                            shift and go to state 8
    var_define                     shift and go to state 9
    class_definition               shift and go to state 10
    struct_definition              shift and go to state 11
    if_statement                   shift and go to state 12
    for_statement                  shift and go to state 13
    while_statement                shift and go to state 14
    return_statement               shift and go to state 15
    function_definition            shift and go to state 16
    import_statement               shift and go to state 17
    getter                         shift and go to state 18
    list_val                       shift and go to state 22

state 4

    (4) statements -> statement .
    LET             reduce using rule 4 (statements -> statement .)
    {               reduce using rule 4 (statements -> statement .)
    NIL             reduce using rule 4 (statements -> statement .)
    FALSE           reduce using rule 4 (statements -> statement .)
    TRUE            reduce using rule 4 (statements -> statement .)
    STRING          reduce using rule 4 (statements -> statement .)
    FLOAT           reduce using rule 4 (statements -> statement .)
    INT             reduce using rule 4 (statements -> statement .)
    (               reduce using rule 4 (statements -> statement .)
    !               reduce using rule 4 (statements -> statement .)
    +               reduce using rule 4 (statements -> statement .)
    -               reduce using rule 4 (statements -> statement .)
    ~               reduce using rule 4 (statements -> statement .)
    ID              reduce using rule 4 (statements -> statement .)
    TYPEOF          reduce using rule 4 (statements -> statement .)
    LAMBDA          reduce using rule 4 (statements -> statement .)
    DEC             reduce using rule 4 (statements -> statement .)
    INC             reduce using rule 4 (statements -> statement .)
    CLASS           reduce using rule 4 (statements -> statement .)
    STRUCT          reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    FOR             reduce using rule 4 (statements -> statement .)
    WHILE           reduce using rule 4 (statements -> statement .)
    RETURN          reduce using rule 4 (statements -> statement .)
    FN              reduce using rule 4 (statements -> statement .)
    IMPORT          reduce using rule 4 (statements -> statement .)
    [               reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    }               reduce using rule 4 (statements -> statement .)


state 5

    (5) statement -> expr . SEP
    (45) expr -> expr . % expr
    (46) expr -> expr . / expr
    (47) expr -> expr . * expr
    (48) expr -> expr . - expr
    (49) expr -> expr . + expr
    (54) expr -> expr . | expr
    (55) expr -> expr . ^ expr
    (56) expr -> expr . & expr
    (57) expr -> expr . SHR expr
    (58) expr -> expr . SHL expr
    (59) expr -> expr . GREATER expr
    (60) expr -> expr . LESS expr
    (61) expr -> expr . OR expr
    (62) expr -> expr . AND expr
    (63) expr -> expr . GREATEREQ expr
    (64) expr -> expr . LESSEQ expr
    (65) expr -> expr . NOTEQ expr
    (66) expr -> expr . EQEQ expr
    (67) expr -> expr . PIPE ID ( args )
    (70) expr -> expr . ? expr : expr
    SEP             shift and go to state 47
    %               shift and go to state 48
    /               shift and go to state 49
    *               shift and go to state 50
    -               shift and go to state 51
    +               shift and go to state 52
    |               shift and go to state 53
    ^               shift and go to state 54
    &               shift and go to state 55
    SHR             shift and go to state 56
    SHL             shift and go to state 57
    GREATER         shift and go to state 58
    LESS            shift and go to state 59
    OR              shift and go to state 60
    AND             shift and go to state 61
    GREATEREQ       shift and go to state 62
    LESSEQ          shift and go to state 63
    NOTEQ           shift and go to state 64
    EQEQ            shift and go to state 65
    PIPE            shift and go to state 66
    ?               shift and go to state 67


state 6

    (6) statement -> var_assign . SEP
    SEP             shift and go to state 68


state 7

    (7) statement -> LET . var : var_type SEP
    (76) var_define -> LET . getter ASSIGN expr
    (77) var_define -> LET . var ASSIGN expr
    (100) var -> . var [ expr ]
    (101) var -> . ID
    (117) getter -> . ID
    (118) getter -> . getter . ID
    ID              shift and go to state 71

    var                            shift and go to state 69
    getter                         shift and go to state 70

state 8

    (36) expr -> var .
    (37) expr -> var . [ expr ]
    (81) var_assign -> var . SHRASGN expr
    (82) var_assign -> var . SHLASGN expr
    (83) var_assign -> var . XORASGN expr
    (84) var_assign -> var . ORASGN expr
    (85) var_assign -> var . ANDASGN expr
    (86) var_assign -> var . MODULOASGN expr
    (87) var_assign -> var . SLASHASGN expr
    (88) var_assign -> var . STARASGN expr
    (89) var_assign -> var . MINUSASGN expr
    (90) var_assign -> var . PLUSASGN expr
    (91) var_assign -> var . ASSIGN expr
    (100) var -> var . [ expr ]
    SEP             reduce using rule 36 (expr -> var .)
    %               reduce using rule 36 (expr -> var .)
    /               reduce using rule 36 (expr -> var .)
    *               reduce using rule 36 (expr -> var .)
    -               reduce using rule 36 (expr -> var .)
    +               reduce using rule 36 (expr -> var .)
    |               reduce using rule 36 (expr -> var .)
    ^               reduce using rule 36 (expr -> var .)
    &               reduce using rule 36 (expr -> var .)
    SHR             reduce using rule 36 (expr -> var .)
    SHL             reduce using rule 36 (expr -> var .)
    GREATER         reduce using rule 36 (expr -> var .)
    LESS            reduce using rule 36 (expr -> var .)
    OR              reduce using rule 36 (expr -> var .)
    AND             reduce using rule 36 (expr -> var .)
    GREATEREQ       reduce using rule 36 (expr -> var .)
    LESSEQ          reduce using rule 36 (expr -> var .)
    NOTEQ           reduce using rule 36 (expr -> var .)
    EQEQ            reduce using rule 36 (expr -> var .)
    PIPE            reduce using rule 36 (expr -> var .)
    ?               reduce using rule 36 (expr -> var .)
    [               shift and go to state 72
    SHRASGN         shift and go to state 73
    SHLASGN         shift and go to state 74
    XORASGN         shift and go to state 75
    ORASGN          shift and go to state 76
    ANDASGN         shift and go to state 77
    MODULOASGN      shift and go to state 78
    SLASHASGN       shift and go to state 79
    STARASGN        shift and go to state 80
    MINUSASGN       shift and go to state 81
    PLUSASGN        shift and go to state 82
    ASSIGN          shift and go to state 83


state 9

    (8) statement -> var_define . SEP
    SEP             shift and go to state 84


state 10

    (9) statement -> class_definition .
    LET             reduce using rule 9 (statement -> class_definition .)
    {               reduce using rule 9 (statement -> class_definition .)
    NIL             reduce using rule 9 (statement -> class_definition .)
    FALSE           reduce using rule 9 (statement -> class_definition .)
    TRUE            reduce using rule 9 (statement -> class_definition .)
    STRING          reduce using rule 9 (statement -> class_definition .)
    FLOAT           reduce using rule 9 (statement -> class_definition .)
    INT             reduce using rule 9 (statement -> class_definition .)
    (               reduce using rule 9 (statement -> class_definition .)
    !               reduce using rule 9 (statement -> class_definition .)
    +               reduce using rule 9 (statement -> class_definition .)
    -               reduce using rule 9 (statement -> class_definition .)
    ~               reduce using rule 9 (statement -> class_definition .)
    ID              reduce using rule 9 (statement -> class_definition .)
    TYPEOF          reduce using rule 9 (statement -> class_definition .)
    LAMBDA          reduce using rule 9 (statement -> class_definition .)
    DEC             reduce using rule 9 (statement -> class_definition .)
    INC             reduce using rule 9 (statement -> class_definition .)
    CLASS           reduce using rule 9 (statement -> class_definition .)
    STRUCT          reduce using rule 9 (statement -> class_definition .)
    IF              reduce using rule 9 (statement -> class_definition .)
    FOR             reduce using rule 9 (statement -> class_definition .)
    WHILE           reduce using rule 9 (statement -> class_definition .)
    RETURN          reduce using rule 9 (statement -> class_definition .)
    FN              reduce using rule 9 (statement -> class_definition .)
    IMPORT          reduce using rule 9 (statement -> class_definition .)
    [               reduce using rule 9 (statement -> class_definition .)
    $end            reduce using rule 9 (statement -> class_definition .)
    }               reduce using rule 9 (statement -> class_definition .)
    ELSE            reduce using rule 9 (statement -> class_definition .)


state 11

    (10) statement -> struct_definition .
    LET             reduce using rule 10 (statement -> struct_definition .)
    {               reduce using rule 10 (statement -> struct_definition .)
    NIL             reduce using rule 10 (statement -> struct_definition .)
    FALSE           reduce using rule 10 (statement -> struct_definition .)
    TRUE            reduce using rule 10 (statement -> struct_definition .)
    STRING          reduce using rule 10 (statement -> struct_definition .)
    FLOAT           reduce using rule 10 (statement -> struct_definition .)
    INT             reduce using rule 10 (statement -> struct_definition .)
    (               reduce using rule 10 (statement -> struct_definition .)
    !               reduce using rule 10 (statement -> struct_definition .)
    +               reduce using rule 10 (statement -> struct_definition .)
    -               reduce using rule 10 (statement -> struct_definition .)
    ~               reduce using rule 10 (statement -> struct_definition .)
    ID              reduce using rule 10 (statement -> struct_definition .)
    TYPEOF          reduce using rule 10 (statement -> struct_definition .)
    LAMBDA          reduce using rule 10 (statement -> struct_definition .)
    DEC             reduce using rule 10 (statement -> struct_definition .)
    INC             reduce using rule 10 (statement -> struct_definition .)
    CLASS           reduce using rule 10 (statement -> struct_definition .)
    STRUCT          reduce using rule 10 (statement -> struct_definition .)
    IF              reduce using rule 10 (statement -> struct_definition .)
    FOR             reduce using rule 10 (statement -> struct_definition .)
    WHILE           reduce using rule 10 (statement -> struct_definition .)
    RETURN          reduce using rule 10 (statement -> struct_definition .)
    FN              reduce using rule 10 (statement -> struct_definition .)
    IMPORT          reduce using rule 10 (statement -> struct_definition .)
    [               reduce using rule 10 (statement -> struct_definition .)
    $end            reduce using rule 10 (statement -> struct_definition .)
    }               reduce using rule 10 (statement -> struct_definition .)
    ELSE            reduce using rule 10 (statement -> struct_definition .)


state 12

    (11) statement -> if_statement .
    LET             reduce using rule 11 (statement -> if_statement .)
    {               reduce using rule 11 (statement -> if_statement .)
    NIL             reduce using rule 11 (statement -> if_statement .)
    FALSE           reduce using rule 11 (statement -> if_statement .)
    TRUE            reduce using rule 11 (statement -> if_statement .)
    STRING          reduce using rule 11 (statement -> if_statement .)
    FLOAT           reduce using rule 11 (statement -> if_statement .)
    INT             reduce using rule 11 (statement -> if_statement .)
    (               reduce using rule 11 (statement -> if_statement .)
    !               reduce using rule 11 (statement -> if_statement .)
    +               reduce using rule 11 (statement -> if_statement .)
    -               reduce using rule 11 (statement -> if_statement .)
    ~               reduce using rule 11 (statement -> if_statement .)
    ID              reduce using rule 11 (statement -> if_statement .)
    TYPEOF          reduce using rule 11 (statement -> if_statement .)
    LAMBDA          reduce using rule 11 (statement -> if_statement .)
    DEC             reduce using rule 11 (statement -> if_statement .)
    INC             reduce using rule 11 (statement -> if_statement .)
    CLASS           reduce using rule 11 (statement -> if_statement .)
    STRUCT          reduce using rule 11 (statement -> if_statement .)
    IF              reduce using rule 11 (statement -> if_statement .)
    FOR             reduce using rule 11 (statement -> if_statement .)
    WHILE           reduce using rule 11 (statement -> if_statement .)
    RETURN          reduce using rule 11 (statement -> if_statement .)
    FN              reduce using rule 11 (statement -> if_statement .)
    IMPORT          reduce using rule 11 (statement -> if_statement .)
    [               reduce using rule 11 (statement -> if_statement .)
    $end            reduce using rule 11 (statement -> if_statement .)
    }               reduce using rule 11 (statement -> if_statement .)
    ELSE            reduce using rule 11 (statement -> if_statement .)


state 13

    (12) statement -> for_statement .
    LET             reduce using rule 12 (statement -> for_statement .)
    {               reduce using rule 12 (statement -> for_statement .)
    NIL             reduce using rule 12 (statement -> for_statement .)
    FALSE           reduce using rule 12 (statement -> for_statement .)
    TRUE            reduce using rule 12 (statement -> for_statement .)
    STRING          reduce using rule 12 (statement -> for_statement .)
    FLOAT           reduce using rule 12 (statement -> for_statement .)
    INT             reduce using rule 12 (statement -> for_statement .)
    (               reduce using rule 12 (statement -> for_statement .)
    !               reduce using rule 12 (statement -> for_statement .)
    +               reduce using rule 12 (statement -> for_statement .)
    -               reduce using rule 12 (statement -> for_statement .)
    ~               reduce using rule 12 (statement -> for_statement .)
    ID              reduce using rule 12 (statement -> for_statement .)
    TYPEOF          reduce using rule 12 (statement -> for_statement .)
    LAMBDA          reduce using rule 12 (statement -> for_statement .)
    DEC             reduce using rule 12 (statement -> for_statement .)
    INC             reduce using rule 12 (statement -> for_statement .)
    CLASS           reduce using rule 12 (statement -> for_statement .)
    STRUCT          reduce using rule 12 (statement -> for_statement .)
    IF              reduce using rule 12 (statement -> for_statement .)
    FOR             reduce using rule 12 (statement -> for_statement .)
    WHILE           reduce using rule 12 (statement -> for_statement .)
    RETURN          reduce using rule 12 (statement -> for_statement .)
    FN              reduce using rule 12 (statement -> for_statement .)
    IMPORT          reduce using rule 12 (statement -> for_statement .)
    [               reduce using rule 12 (statement -> for_statement .)
    $end            reduce using rule 12 (statement -> for_statement .)
    }               reduce using rule 12 (statement -> for_statement .)
    ELSE            reduce using rule 12 (statement -> for_statement .)


state 14

    (13) statement -> while_statement .
    LET             reduce using rule 13 (statement -> while_statement .)
    {               reduce using rule 13 (statement -> while_statement .)
    NIL             reduce using rule 13 (statement -> while_statement .)
    FALSE           reduce using rule 13 (statement -> while_statement .)
    TRUE            reduce using rule 13 (statement -> while_statement .)
    STRING          reduce using rule 13 (statement -> while_statement .)
    FLOAT           reduce using rule 13 (statement -> while_statement .)
    INT             reduce using rule 13 (statement -> while_statement .)
    (               reduce using rule 13 (statement -> while_statement .)
    !               reduce using rule 13 (statement -> while_statement .)
    +               reduce using rule 13 (statement -> while_statement .)
    -               reduce using rule 13 (statement -> while_statement .)
    ~               reduce using rule 13 (statement -> while_statement .)
    ID              reduce using rule 13 (statement -> while_statement .)
    TYPEOF          reduce using rule 13 (statement -> while_statement .)
    LAMBDA          reduce using rule 13 (statement -> while_statement .)
    DEC             reduce using rule 13 (statement -> while_statement .)
    INC             reduce using rule 13 (statement -> while_statement .)
    CLASS           reduce using rule 13 (statement -> while_statement .)
    STRUCT          reduce using rule 13 (statement -> while_statement .)
    IF              reduce using rule 13 (statement -> while_statement .)
    FOR             reduce using rule 13 (statement -> while_statement .)
    WHILE           reduce using rule 13 (statement -> while_statement .)
    RETURN          reduce using rule 13 (statement -> while_statement .)
    FN              reduce using rule 13 (statement -> while_statement .)
    IMPORT          reduce using rule 13 (statement -> while_statement .)
    [               reduce using rule 13 (statement -> while_statement .)
    $end            reduce using rule 13 (statement -> while_statement .)
    }               reduce using rule 13 (statement -> while_statement .)
    ELSE            reduce using rule 13 (statement -> while_statement .)


state 15
